Fix text justification on mobile and a bit of content

--- a/_styles/list.scss
+++ b/_styles/list.scss
@@ -22,3 +22,9 @@ li {
     margin: 0;
   }
 }
+
+@media (max-width: 768px) {
+  li {
+    text-align: left;
+  }
+}
